Fixed Hopscoth issues where the closing 'x' was not showing.

--- a/code/app/assets/css/rtl.less
+++ b/code/app/assets/css/rtl.less
@@ -63,6 +63,7 @@ body {
   border-radius: 0 @inputGroupBorderRadius @inputGroupBorderRadius 0;
 }
 
+// Hopscotch RTL adjustments.
 div.hopscotch-bubble {
   .hopscotch-bubble-container {
     .hopscotch-title {
@@ -84,4 +85,9 @@ div.hopscotch-bubble {
   div.hopscotch-bubble-arrow-container.right {
     right: -22px;
   }
+
+  div.hopscotch-bubble-arrow-container.up {
+    top: -21px;
+  }
+
 }
